test/bad/type_err4.prg
// FAILS: TODO

// When declaring type explicitly, type must match.
q := 2; // This works.
w : string = 2; // This fails with type error.
